// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs renders correctly with headers and content 1`] = `
Array [
  .c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: grid;
  grid-gap: var(--grid-gap,0);
  grid-template-columns: repeat(auto-fit,minmax(0,1fr));
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  cursor: pointer;
  font-family: Nunito Sans;
  text-transform: uppercase;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 12px;
  font-weight: 600;
  line-height: 16px;
}

.c1 * {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFFFFF;
}

.c1 a {
  display: block;
  width: 148px;
  height: 52px;
  line-height: 52px;
}

.c1 a > *:first-child {
  margin-right: 10px;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  border-radius: 4px 4px 0 0;
  height: 4px;
  display: block;
  background-color: #FFFFFF;
  position: absolute;
  right: 10px;
  left: 10px;
  bottom: 0;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  cursor: pointer;
  font-family: Nunito Sans;
  text-transform: uppercase;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 12px;
  font-weight: 600;
  line-height: 16px;
}

.c3 * {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #EBA49A;
}

.c3 a {
  display: block;
  width: 148px;
  height: 52px;
  line-height: 52px;
}

.c3 a > *:first-child {
  margin-right: 10px;
}

<div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      One
      <span
        className="c2"
      />
    </div>
    <div
      className="c3"
      onClick={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      Two
    </div>
    <div
      className="c3"
      onClick={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      Three
    </div>
    <div
      className="c3"
      onClick={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      Four
    </div>
  </div>,
  .c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 10px;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      One Content One
    </div>
  </div>,
]
`;

exports[`Tabs renders correctly with only headers 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: grid;
  grid-gap: var(--grid-gap,0);
  grid-template-columns: repeat(auto-fit,minmax(0,1fr));
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  cursor: pointer;
  font-family: Nunito Sans;
  text-transform: uppercase;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 12px;
  font-weight: 600;
  line-height: 16px;
}

.c1 * {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFFFFF;
}

.c1 a {
  display: block;
  width: 148px;
  height: 52px;
  line-height: 52px;
}

.c1 a > *:first-child {
  margin-right: 10px;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  border-radius: 4px 4px 0 0;
  height: 4px;
  display: block;
  background-color: #FFFFFF;
  position: absolute;
  right: 10px;
  left: 10px;
  bottom: 0;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  cursor: pointer;
  font-family: Nunito Sans;
  text-transform: uppercase;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 12px;
  font-weight: 600;
  line-height: 16px;
}

.c3 * {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #EBA49A;
}

.c3 a {
  display: block;
  width: 148px;
  height: 52px;
  line-height: 52px;
}

.c3 a > *:first-child {
  margin-right: 10px;
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    One
    <span
      className="c2"
    />
  </div>
  <div
    className="c3"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    Two
  </div>
  <div
    className="c3"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    Three
  </div>
  <div
    className="c3"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    Four
  </div>
</div>
`;

exports[`Tabs renders correctly with variant default 1`] = `ShallowWrapper {}`;
